# RAG_GROW

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: quality.yml  scheduled-ingest.yml
config/: default.yaml
docs/: architecture-high-level-diagram.md  chunking-embedding-architecture.md  evaluation-edge-cases.md  problemStatement.md  rag-architecture.md
docs/diagrams/sources/: 01-system-context.mmd  02-ingestion.mmd  (+3 more)
phases/: README.md
phases/phase_0_foundation/: README.md  SECRETS.md
phases/phase_1_corpus/: README.md  corpus_manifest.yaml  expansion_policy.md
phases/phase_2_scrape/: README.md
phases/phase_3_chunk_embed/: README.md
phases/phase_4_github_actions/: README.md
phases/phase_5_retrieval/: README.md
phases/phase_6_router_generation/: README.md
phases/phase_7_api_threads/: README.md
phases/phase_8_minimal_ui/: README.md
phases/phase_8_ui/: README.md
phases/phase_9_quality/: README.md  golden_cases.yaml
src/m1_rag/: __init__.py  api.py  assistant.py  chunking.py  corpus.py  embeddings.py  generation.py  index_inspect.py  ingest.py  observability.py  postcheck.py  retrieval.py  router.py  scrape.py  settings.py  thread_store.py  vector_store.py
tests/: test_api.py  test_assistant.py  test_chunking.py  test_corpus.py  test_golden_offline.py  test_ingest.py  test_observability.py  test_postcheck.py  test_retrieval.py  test_router.py  test_scrape.py  test_settings.py  test_ui.py
web/: .env.local.example  README.md  next.config.ts  package-lock.json  postcss.config.mjs
(+12 files in other folders)
